# docintegrity

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: example.md
examples/docx/: Automata Theory and Formal Languages A Comprehensive Exploration.docx  Computational Complexity Theory Unraveling the Fabric of Efficient Computation.docx  Emergence and Complexity Exploring Physics Beyond Reductionism.docx  The Future of Energy Advances in Nuclear Fusion Research.docx  The Future of Quantum Computing A Paradigm Shift in Information Processing.docx  The Quantum Mechanics Revolution Understanding the Weird World of Subatomic Particles.docx  The Role of Symmetry in Physics From Noether's Theorem to the Standard Model.docx  The Search for Dark Matter Unraveling the Mysteries of the Universe.docx
src/docintegrity/: cli.py  core.py  utils.py
